--- a/frontend/views/addPhotoPage.html
+++ b/frontend/views/addPhotoPage.html
@@ -21,7 +21,7 @@
           </button><br>
         </form>
         <button ng-disabled="loading" type="submit" class="btn btn-primary"
-    ng-click="redirectTo('addStudents')">Back</button>
+    ng-click="redirectTo('updateStudents')">Back</button>
       </section>
 </body>
 </html>
