--- a/frontend/views/changePhotoPage.html
+++ b/frontend/views/changePhotoPage.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <title>Change Photo Page</title>
-</head>
-<body>
-    <section class="container">
-        <h1 style="text-align: center;">{{app}}</h1><br>
 
-        <div ng-show="loading" style="display: flex; justify-content: center;">
-          <img src="/frontend/uploads/loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
-        </div> <!-- div do reload -->
-        
-        <form name="changePhotoForm" enctype="multipart/form-data" id="changePhotoForm">
-          <input style="width: 460px;" type="file" id="changeFile" ng-file-select="onFileSelect($files)" class="form-control form-control-lg" 
-              name="photo" ng-model="photo">
-          <button ng-disabled="loading" type="submit" class="btn btn-primary btn-block">
-            changePhoto
-          </button><br>
-        </form>
-        <div class="alert alert-danger" ng-if="error" style="font-weight: bold;">{{error}}</div>
-      </section>
+<head>
+  <meta charset="UTF-8">
+  <title>Change Photo Page</title>
+</head>
+
+<body>
+  <section class="container">
+    <h1 style="text-align: center;">{{app}}</h1><br>
+
+    <div ng-show="loading" style="display: flex; justify-content: center;">
+      <img src="/frontend/uploads/loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
+    </div> <!-- div do reload -->
+
+    <form name="changePhotoForm" enctype="multipart/form-data" id="changePhotoForm">
+      <input style="width: 460px;" type="file" id="changeFile" ng-file-select="onFileSelect($files)"
+        class="form-control form-control-lg" name="photo" ng-model="photo">
+      <button ng-disabled="loading" type="submit" class="btn btn-primary btn-block">
+        changePhoto
+      </button><br>
+    </form>
+    <button ng-disabled="loading" type="submit" class="btn btn-primary"
+    ng-click="redirectTo('updateStudents')">Back</button>
+    <div class="alert alert-danger" ng-if="error" style="font-weight: bold;">{{error}}</div>
+  </section>
 </body>
+
 </html>
