--- a/frontend/views/loginPage.html
+++ b/frontend/views/loginPage.html
@@ -11,15 +11,17 @@
           <img src="/frontend/uploads/loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
         </div> <!-- div do reload -->
         <form name="userForm">
-          <h4>Email</h4> <input type="text" class="form-control" placeholder="email" aria-label="Email"
+          <h4>Email*</h4> <input type="text" class="form-control" placeholder="email" aria-label="Email"
            name="email" ng-model="user.email" ng-required="true" maxlength="45">
-          <h4>Password</h4><input type="password" class="form-control" placeholder="password" aria-label="password"
-           name="password" ng-model="user.password" ng-required="true" ng-minlength="6">
+          <h4>Password*</h4><input type="password" class="form-control" placeholder="password" aria-label="password"
+           name="password" ng-model="user.password" ng-required="true">
         </form>
 
         <div ng-if="error" class="alert alert-danger" style="font-weight: bold; margin-top: 20px;">
           {{error}}
         </div>
+
+        <div style="color: red; font-weight: bold; margin-top: 10px;">*Required fields</div>
 
         <button type="submit" class="btn btn-primary btn-block"
           ng-click="login(user)">Sign-in</button><br>
