--- a/frontend/views/updateUsersPage.html
+++ b/frontend/views/updateUsersPage.html
@@ -15,14 +15,14 @@
         <form name="userForm">
             <h4>Name</h4> <input type="text" class="form-control" placeholder="name" aria-label="name" name="name"
                 ng-model="user.name">
-            <h4>Email</h4> <input type="text" class="form-control" placeholder="Email" aria-label="Email" name="email"
+            <h4>Email</h4> <input type="text" class="form-control" placeholder="email" aria-label="email" name="email"
                 ng-model="user.email">
             <h4>Old password</h4><input type="password" class="form-control" placeholder="old password"
-                aria-label="old_password" name="old_password" ng-model="user.old_password" ng-minlength="6">
+                aria-label="old_password" name="old_password" ng-model="user.old_password">
             <h4>New password</h4><input type="password" class="form-control" placeholder="new password"
-                aria-label="new_password" name="new_password" ng-model="user.new_password" ng-minlength="6">
+                aria-label="new_password" name="new_password" ng-model="user.new_password">
             <h4>Confirm password</h4><input type="password" class="form-control" placeholder="confirm password"
-                aria-label="confirm_password" name="confirm_password" ng-model="user.confirm_password" ng-minlength="6">
+                aria-label="confirm_password" name="confirm_password" ng-model="user.confirm_password">
         </form>
 
         <div ng-if="error" class="alert alert-danger" style="font-weight: bold; margin-top: 20px;">
