--- a/frontend/views/menuPage.html
+++ b/frontend/views/menuPage.html
@@ -44,7 +44,7 @@
         <td>{{fornecedor.rua}}</td>
         <td>{{fornecedor.bairro}}</td>
         <td>{{fornecedor.cidade}}</td>
-        <td>{{fornecedor.uf}}</td>
+        <td>{{fornecedor.uf | uppercase}}</td>
         <td>
           <div class="btn-group">
             <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
