--- a/frontend/views/produtosFormPage.html
+++ b/frontend/views/produtosFormPage.html
@@ -12,7 +12,7 @@
     <div ng-show="loading" style="display: flex; justify-content: center;">
       <img src="/frontend/uploads/loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
     </div> <!-- div do reload -->
-    <form name="fornecedorForm">
+    <form name="produtoForm">
         <h4>Nome*</h4> <input type="text" class="form-control" placeholder="nome" name="nome" ng-model="produto.nome"
         ng-required="true">
         <h4>Preço*</h4> <input type="text" class="form-control" placeholder="preço" name="preco" ng-model="produto.preco"
