--- a/frontend/views/fornecedorFormPage.html
+++ b/frontend/views/fornecedorFormPage.html
@@ -32,7 +32,7 @@
           ng-required="true">
       </div>
     </form>
-    <button ng-disabled="loading" type="submit" class="btn btn-dark" ng-click="redirectTo('menu')">Menu</button>
+    <button ng-disabled="loading" type="submit" class="btn btn-primary" ng-click="redirectTo('menu')">Menu</button>
     <button type="submit" class="btn btn-primary btn-block" ng-click="submit(fornecedor)">{{msg}}</button><br>
     <div class="alert alert-danger" ng-if="error" style="font-weight: bold;">{{error}}</div>
   </section>
